--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@tailwindcss/forms": "^0.5.9",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
